Make serverName optional in ssl too

--- a/templates/vhosts.conf.j2
+++ b/templates/vhosts.conf.j2
@@ -39,7 +39,9 @@
 {% for vhost in apache_vhosts_ssl %}
 {% if apache_ignore_missing_ssl_certificate or apache_ssl_certificates.results[loop.index0].stat.exists %}
 <VirtualHost {{ apache_listen_ip }}:{{ apache_listen_port_ssl }}>
+{% if vhost.servername is defined %}
   ServerName {{ vhost.servername }}
+{% endif %}
 {% if vhost.serveralias is defined %}
   ServerAlias {{ vhost.serveralias }}
 {% endif %}
